--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="Javascript compress project" basedir="D:\workspace\test_2" default="compile">
+<project name="Javascript compress project" basedir="D:\workspace\test_4" default="compile">
 
     <taskdef name="jscomp" classname="com.google.javascript.jscomp.ant.CompileTask"
              classpath="D:\Cocos2d\cocos2d-x-3.14.1\tools\cocos2d-console\plugins\plugin_compile\build_web/bin/compiler-1.7.jar"/>
@@ -8,11 +8,11 @@
         <jscomp compilationLevel="simple" 
                 warning="quiet"
                 debug="false" 
-                output="D:\workspace\test_2\publish\html5/game.min.js"
+                output="D:\workspace\test_4\publish\html5/game.min.js"
                 languagein="ECMASCRIPT5"
                 
                 >
-            <sources dir="D:\workspace\test_2\frameworks\cocos2d-html5">
+            <sources dir="D:\workspace\test_4\frameworks\cocos2d-html5">
                 <file name="CCBoot.js"/>
                 <file name="cocos2d/core/event-manager/CCEventHelper.js"/>
                 <file name="CCDebugger.js"/>
@@ -171,6 +171,10 @@
             <sources dir="${basedir}">
                 <file name="src/resource.js"/>
                 <file name="src/app.js"/>
+                <file name="src/Constant.js"/>
+                <file name="src/Storage.js"/>
+                <file name="src/GameUI.js"/>
+                <file name="src/Candy.js"/>
                 <file name="main.js"/>
 
             </sources>
